[package]
name = "rsonnet"
version = "0.1.0"
authors = ["Owen Diehl <ow.diehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
k8s-openapi = { features = ["v1_16"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
